# sheeco

./: .gitignore  ADAPTIVE_THRESHOLDS_COMPLETE.md  ANALYSIS_APPROACH1_BARDA.md  APPROACH_2_POINT_ORDER_FIX.md  BOTH_FIXES_COMPLETE.md  BOUNDS_FILTER_CLARIFICATION_NEEDED.md  CLAUDE.md  COPLANAR_TAB_FIX.md  CORNER_ORDERING_ANALYSIS.md  CRITICAL_BUG_FIX.md  FIX_SUMMARY.md  FIX_SUMMARY_SESSION2.md  FP_NAMING_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ADAPTIVE_THRESHOLDS.md  IMPLEMENTATION_SUMMARY.md  ONE_BEND_DIRECT_POWER_FLOWS.md  PERPENDICULAR_EDGE_FILTER_EXPLANATION.md  PERPENDICULAR_FIX_COMPLETE.md  PROJECTION_FILTER_SOLUTION.md  PYVISTA_PLOTTING_ISSUE.md  README.md  SEGMENT_PLOTTING_GUIDE.md  TRANSPORTSCHUH_FIX_PLAN.md  TRANSPORTSCHUH_ISSUE_PLAN.md  TWO_BEND_ANALYSIS.md  TWO_BEND_FALLBACK_FIXED.md  VERIFICATION_RESULTS.md  ZERO_BEND_IMPLEMENTATION_PLAN.md  analyze_bend_line_placement.py  analyze_crossing_issue.py  analyze_transportschuh.py  analyze_with_mounts_vs_transportschuh.py  check_segment_details.py  check_segment_variety.py  check_segments.py  check_with_mounts_segments.py  compare_working_vs_failing.py  debug_adaptive_with_mounts.py  debug_approach1_all_filters.py  (+76 more)
.claude/: settings.local.json
config/: config.yaml  design_rules.py  user_input.py
exports_test/: 260114_1424_part0_2rects_2tabs.json  260114_1425_part1_3rects_3tabs.json  260114_1512_part1_3rects_3tabs.json  260118_1510_part0_2rects_2tabs.json  260118_1716_part0_2rects_2tabs.json  260118_1904_part0_2rects_2tabs.json  260118_1907_part0_2rects_2tabs.json  (+3 more)
tests/: test_json_export.py  (+1 more)
(+67 files in other folders)
