[project]
name = "hgen-sm"
version = "0.4"
authors = [
    { name = "Maxim Möllhoff", email = "maxim@moellhoff.eu" }
]
readme = "README.md"

dependencies = [
    "numpy",
    "pyvista",
    "PyYAML",
    "dataclasses",
    "shapely",
    "typing",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]